Accordion Result: Add width to prevent overflow (#591)

--- a/src/ui/sass/modules/_AccordionResult.scss
+++ b/src/ui/sass/modules/_AccordionResult.scss
@@ -20,6 +20,7 @@
   $accordion-result-cta-font-weight: $font-weight-normal !default;
 
   background-color: $accordion-result-background-color;
+  width: 100%;
 
   & + &
   {
